# Portfolio_Env

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  results.txt
data/: reliance.csv
portfolio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
server/: __init__.py  app.py  env.py  graders.py  portfolio_environment.py  requirements.txt
