[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio"
version = "0.1.0"
description = "Portfolio Management RL Environment - Trade Reliance Industries stock using technical indicators"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aiohttp>=3.9.0",
    "openenv>=0.1.13",
    "openenv-core>=0.2.2",
    "requests>=2.31.0",
]

[project.scripts]
server = "portfolio.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["portfolio", "portfolio.server"]
package-dir = { "portfolio" = ".", "portfolio.server" = "server" }
